--- a/buildroot-2017.08/configs/raspberrypi3_defconfig
+++ b/buildroot-2017.08/configs/raspberrypi3_defconfig
@@ -6,6 +6,7 @@ BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_9=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt board/raspberrypi3/device_table.txt"
 BR2_SYSTEM_DHCP="eth0"
+BR2_ROOTFS_USERS_TABLES="board/raspberrypi3/users_table.txt"
 BR2_ROOTFS_OVERLAY="board/raspberrypi3/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi3/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi3/post-image.sh"
@@ -18,6 +19,7 @@ BR2_LINUX_KERNEL_DEFCONFIG="bcm2709"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-cm3"
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_RSYNC=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
