--- a/buildroot-2017.08/configs/raspberrypi3_defconfig
+++ b/buildroot-2017.08/configs/raspberrypi3_defconfig
@@ -4,6 +4,7 @@ BR2_ARM_FPU_NEON_VFPV4=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_9=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt board/raspberrypi/device_table.txt"
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_USERS_TABLES="board/raspberrypi3/users_table.txt"
 BR2_ROOTFS_OVERLAY="board/raspberrypi3/rootfs_overlay"
@@ -18,8 +19,11 @@ BR2_LINUX_KERNEL_DEFCONFIG="bcm2709"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-cm3"
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_RSYNC=y
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="100M"
